--- a/index.html
+++ b/index.html
@@ -1,7 +1,23 @@
-<!DOCTYPE html>
 <html>
+<style>
+* {
+    -webkit-font-smoothing: antialiased;
+}
+p {
+    line-height: 0.5;
+    font-size: 30px;
+    font-family: Helvetica;
+}
+a {
+    line-height: 1.5;
+    color: #343434;
+    text-decoration: none;
+    border-bottom: 2px solid #bfbfbf;
+}
+</style>
 <body>
-<h1>Hello World</h1>
-<p>test.</p>
+<center><img src="ps-flag.png" /></center>
+<p>Design, Development, Aesthetic Research</p>
+<p>Working hard. Hi-End Quality.</p>
+<p><a href="mailto:hello@bg-d.net">hello@bg-d.net</a></p>
 </body>
-</html>
