--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@ body {
     -webkit-font-smoothing: antialiased;
     padding: 70px;
 }
+
+::selection {
+    color: #ffffff;
+    background: #454545;
+}
+
 p {
     line-height: 0.5;
     font-size: 30px;
     font-family: Helvetica;
 }
+
 a {
     line-height: 1.5;
     color: #343434;
