--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ a {
 }
 </style>
 <body>
-<img src="ps-flag.png" /><br>
+<img src="ps-flag.png" /><br><br><br>
 <p>Design, Development, Aesthetic Research</p>
 <p>Working hard. Hi-End Quality.</p>
 <p><a href="mailto:hello@bg-d.net">hello@bg-d.net</a></p>
