--- a/htmlblock/index.html
+++ b/htmlblock/index.html
@@ -29,7 +29,7 @@ a {
         </div>
         
         <div style="padding-top:50px;">
-        Contact email<br><a style="border-bottom: 2px solid #bfbfbf;" href="mailto:hello@bg-d.net">hello@bg-d.net</a>
+        If you have any questions or suggestions<br><a style="border-bottom: 2px solid #bfbfbf;" href="mailto:hello@bg-d.net">hello@bg-d.net</a>
         </div>
         
         <p style="color:#999999; padding-top:50px;">If you like this plugin, take a look also to the Photoshop Browser Preview</p>
