--- a/jony/index.html
+++ b/jony/index.html
@@ -98,8 +98,9 @@ iframe {
         });
         </script>
         <a href="BlurLikeJony.mpkg.zip" id="download">Download</a>
-        <div style="color:grey; right: 80px; margin-top:120px;position:fixed;">    
+        <div style="text-align:center; color:grey; right: 73px; margin-top:120px; position:fixed;">    
         Mac OS, CC 2015
+            <p style="opacity:0.3; text-align:center;font-size:14px;"><a href="BlurLikeJonyManual.zip">version without installer</a></p>
             </div>
       <div style="width:550px;">
         <h1 class="big">Blur Like Jony</h1>
