--- a/jony/index.html
+++ b/jony/index.html
@@ -100,7 +100,7 @@ iframe {
         <a href="BlurLikeJony.mpkg.zip" id="download">Download</a>
         <div style="text-align:center; color:grey; right: 73px; margin-top:120px; position:fixed;">    
         Mac OS, CC 2015
-            <p style="opacity:0.3; text-align:center;font-size:14px;"><a href="BlurLikeJonyManual.zip">version without installer</a></p>
+            <p style="margin-top:20px; line-height:1.5; opacity:0.3; text-align:center;font-size:14px;"><a href="BlurLikeJonyManual.zip">version without installer<br>for older PS vers</a></p>
             </div>
       <div style="width:550px;">
         <h1 class="big">Blur Like Jony</h1>
