--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@ a {
 </style>
 <body>
 <img src="ps-flag.png" /><br><br><br>
-<p>Design, Development, Aesthetic Research</p>
-<p>Working hard. Hi-End Quality.</p>
-<p><a href="mailto:hello@bg-d.net">hello@bg-d.net</a></p>
+<p>Application design.</p>
+<p>Contemporary design solutions for iOS, Mac OS, Web.</p>
+    <br>
+<p>Portfolio by request <a href="mailto:hello@bg-d.net">hello@bg-d.net</a></p>
 
 <!-- Yandex.Metrika counter -->
 <script type="text/javascript">
