--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@ a {
 </style>
 <body>
 <img src="ps-flag.png" /><br><br><br>
-<p>Application design.</p>
-<p>Contemporary design solutions for iOS, Mac OS, Web.</p>
-    <br>
+<p>Contemporary design solutions for Mac OS, iOS, Web.</p>
+<p>Available for new projects.</p>
+<br>
 <p>Portfolio by request <a href="mailto:hello@bg-d.net">hello@bg-d.net</a></p>
 
 <!-- Yandex.Metrika counter -->
