--- a/htmlblock/index.html
+++ b/htmlblock/index.html
@@ -24,6 +24,7 @@ a {
         <a href="img/ideas-of-using.png" target="_blank"><img style="padding-top:80px;" src="img/h1-3.png" /></a>
        <br>
        <a href="PhotoshopHTMLBlock_2015.mpkg.zip"><img style="padding-top:30px;" src="img/h1-4.png" /></a>
+        <p style="color:#999999; padding-top:0px;">Photoshop CC 2015, Mac OS only</p>
        <div style="padding-top:30px;">
 <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://bg-d.net/htmlblock" data-size="large" data-count="none">Tweet</a> <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
         </div>
