--- a/index2.html
+++ b/index2.html
@@ -188,27 +188,27 @@
         <div style="padding-right:100px;" data-fluffy-content>
             <img style="height:432px; padding-top: 110px; padding-left: 100px;" src="" data-1x="imgs/s_01.png" data-2x="imgs/s_01@2x.png" />
             <div style="display: inline-block; width: 356px; height: 330px; overflow: hidden;">
-                <video style="margin: 15px; width: 356px; height: 330px;" loop autobuffer autoplay muted>
+                <video style="margin: 15px; width: 356px; height: 330px;" preload loop autobuffer autoplay muted>
                     <source id="mp4" src="imgs/s_a0.mp4" type="video/mp4">
                 </video>
             </div>
             <div style="display: inline-block; width: 436px; height: 440px; overflow: hidden;">
-                <video style="margin: 25px;" loop autobuffer autoplay muted>
+                <video style="margin: 25px;" preload loop autobuffer autoplay muted>
                     <source id="mp4" src="imgs/s_a2.mp4" type="video/mp4">
                 </video>
             </div>
             <div style="display:inline-block; width: 480px; height: 312px; overflow: hidden;">
-                <video style="margin: 10px; width: 480px; height: 312px;" loop autobuffer autoplay muted>
+                <video style="margin: 10px; width: 480px; height: 312px;" preload loop autobuffer autoplay muted>
                     <source id="mp4" src="imgs/s_a5.mp4" type="video/mp4">
                 </video>
             </div>
             <div style="display:inline-block; width: 316px; height: 298px; overflow: hidden;">
-                <video style="margin: 15px;" loop autobuffer autoplay muted>
+                <video style="margin: 15px;" preload loop autobuffer autoplay muted>
                     <source id="mp4" src="imgs/s_a3.mp4" type="video/mp4">
                 </video>
             </div>
             <div style="display:inline-block;  width: 620px; height: 104px;">
-                <video style="margin: 15px;" loop autobuffer autoplay muted>
+                <video style="margin: 15px;" preload loop autobuffer autoplay muted>
                     <source id="mp4" src="imgs/s_a4.mp4" type="video/mp4">
                 </video>
             </div>
@@ -219,7 +219,7 @@
     <img class="simg" src="imgs/a_00.png">
     <div class="project">ADP Mobile provides a convenient way to access payroll, time and attendance, benefits and other vital HR information for user. As part of the team, I helped to redesign ADP mobile applications.
         <br>
-        <br>I've created user experience scenarios, visual design for dashboard, widgets, internals screens. Also, I've created design for web developer community portal.
+        <br>I've created user experience scenarios, visual design for dashboard, widgets, internals screens. Also,&nbsp;I've created design for web developer community portal.
     </div>
     <div style="background-color: #EBE8EC; height:640px; " data-fluffy-container data-fluffy-options='{"smartWidth":false, "showScrollbars": true, "mouseDamp": "3"}'>
         <div style="padding-right:100px;" data-fluffy-content>
