--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
 <head>
     <meta content="UI/UX Interface designer" name="description">
-    <meta content="ux design, ui design, freelance designer, interface designer, ux designer, ui designer, user interface design, user experience design, UI/UX, ux, ui, mobile, app, design, website, user experience, enterprise, user interface, mobile design, interactive prototyping, wireframing" name="keywords">
+    <meta content="iphone application design, ios app design, iphone app design, ux design, ui design, freelance designer, interface designer, ux designer, ui designer, user interface design, user experience design, UI/UX, ux, ui, mobile, app, design, website, user experience, enterprise, user interface, mobile design, interactive prototyping, wireframing" name="keywords">
+    <title>Interface designer - UX/UI design for mobile, desktop and web</title>
 </head>
 <style>
 @font-face {
