--- a/developer/index.html
+++ b/developer/index.html
@@ -240,7 +240,7 @@
          </h1>
     </div>
     <div class="info">
-        Привет. Я занимаюсь дизайном интерфейсов для веба и мобильных приложений.
+        Привет, меня зовут Богдан. Я занимаюсь дизайном интерфейсов для веба и мобильных приложений. Список моих работ можно посмотреть на сайте <a href="http://bg-d.net" target="_blank">http://bg-d.net</a>
         <br>
         <br>Я ищу iOS разработчика, которому было бы интересно попробовать развить собственную компанию по разработке мобильных приложений в полном цикле &mdash; это анализ бизнес требований, проектирование, дизайн, девелопмент.
         <br>
@@ -248,6 +248,9 @@
         <br>
         <br>Буду рад любым идеям и обратной связи.
         <br>Спасибо.
+        
+        <br><br>
+        <span style="font-size: 20px;">Богдан, Санкт-петербург, контактный телефон: +79095851704</span>
     </div>
 </body>
 <!-- Yandex.Metrika counter -->
