--- a/sketch-test/index.html
+++ b/sketch-test/index.html
@@ -1,6 +1,8 @@
 <html>
     <head>
         <style>
+            
+            @import url('https://rsms.me/inter/inter-ui.css');
  
             *x {
                 outline: 1px solid rgba(0,0,0,0.5);
